--- a/callback.html
+++ b/callback.html
@@ -8,5 +8,12 @@
     <p>
       This page should close soon
     </p>
+    <script>
+    	SC.initialize({
+clientid:'0PKz7xjH5uemKDK8GdHQyO0mU9kZ0fJ2';
+redirecturi:'https://kantelabs.github.io/index.html'
+});
+    	
+    </script>
   </body>
 </html>
