--- a/callback.html
+++ b/callback.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta charset="utf-8">
-    <title>Callback</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title>Connect with SoundCloud</title>
   </head>
-  <body onload="window.setTimeout(opener.SC.connectCallback, 1);">
-    <p>
-      This page should close soon
-    </p>
+  <body onload="window.setTimeout(window.opener.SC.connectCallback, 1)">
+    <b style="text-align: center;">This popup should automatically close in a few seconds</b>
   </body>
 </html>
