--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <script>
 SC.initialize({
   client_id: '0PKz7xjH5uemKDK8GdHQyO0mU9kZ0fJ2',
-  redirect_uri: 'http://kantelabs.github.io/KanteCloud/callback.html'
+  redirect_uri: 'kantelabs.github.io/KanteCloud/callback.html'
 });
 
 // initiate auth popup
