--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+  <meta http-equiv="refresh" content="0; URL='https://kantelabs.github.io/KanteCloud/public/index.html'" />
 	<title>KanteCloud Web App</title>
     <meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
