Allow redirect changes

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-  <meta http-equiv="refresh" content="0; URL='https://kantelabs.github.io/KanteCloud/public/index.html'" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css" type="text/css" />
+	<meta http-equiv="refresh" content="0; URL='https://kantelabs.github.io/KanteCloud/public/index.html'" />
+	<link 
 	<title>KanteCloud Web App</title>
     <meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,6 +16,7 @@
   <body>
   <script src="https://connect.soundcloud.com/sdk/sdk-3.1.2.js"></script>
     <div id="App"></div>
+	<h1>hi</h1>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
