--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>KanteCloud Web App</title>
+    <script src="https://connect.soundcloud.com/sdk/sdk-3.1.2.js"></script>
   </head>
   <body>
     <div id="root"></div>
